# fiber-agent

./: .gitconfig  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .releaserc.json  .viewer  Cargo.toml  LICENSE  README.md  SCREEN_LAYOUTS.txt  authorized_signers.yaml  build.rs  commitlint.config.js  fiber.config.yaml  fiber.network.config.yaml  fiber.sensors.config.yaml  fiber.yaml  fiber_architecture.excalidraw  fiber_id25519  fiber_id25519.pub  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.gitlab/ci/: _rules.yml  build_release.yml  mr_checks.yml  prep_tags.yml  semrel.yml  trigger_yocto_qbee.yml
config/: config.yaml
config/network/: 10-fiber-dhcp-client.network  10-fiber-dhcp-server.network  10-fiber-static.network  20-fiber-wifi-configuration.conf
docs/: BLE_HARDWARE_TESTS.md  EU_MDR_COMPLIANCE_STATUS.md
docs/superpowers/plans/: 2026-04-14-sensor-beep-snooze.md  2026-04-27-ble-in-app.md
docs/superpowers/sessions/: 2026-04-27-ble-in-app-session.md
docs/superpowers/specs/: 2026-04-13-sensor-beep-silence-button-design.md  2026-04-27-ble-in-app-design.md
fiber/: __main__.py  core.py  setup.py
fiber/broker/: consts.py  local_storage.py  modules.py  sensor.py
fiber/buttons/: button.py
fiber/client/: handler.py  manager.py  validator.py
fiber/common/: config_manager.py  consts.py  gpio_manager.py  queue_manager.py  southbridge.py  thread_manager.py
fiber/cooper/: consts.py  cooper.py  gateway.py
fiber/display/: const.py  examplewidgets.py  sensorwidget.py  spidisplay.py  st7920display.py
fiber/display/src/: display.py  widget.py
fiber/hal/: __init__.py  consts.py  i2c.py  led_controller.py  southbridge.py  spidisplay.py
fiber/hal/devices/: eeprom.py  probe_manager.py
fiber/interface/: handler.py
fiber/models/: configurations.py  display_sensor.py  indicators.py  measurement.py  request.py  request_response.py  response.py  sensor.py  system.py  voltage.py
fiber/mqtt/: mqtt_bridge.py  mqtt_handler.py
fiber/sensor/: sensor.py
fiber/server/: display_handler.py  led_controller.py  manager.py  network_handler.py  serial_number.py
fiber/server/handlers/: __init__.py  display_control.py  led_controll.py  network_interface.py
fiber/system/: display_handler.py  manager.py  system.py
fiber/tower/: tower.py
install/: hosts  install.yml
install/backup/: config.txt
keys/: blockchain.key  hmac.key
proto/: app_config.proto
scripts/: init-signer.sh  install.sh  migrate_config_v2.py  publish-to-github.sh
scripts/hooks/: pre-push
src/: app.rs  audit.rs  audit_db.rs  blockchain.rs  buttons.rs  compaction.rs  config.rs  discovery.rs  display.rs  lib.rs  logging.rs  main.rs  model.rs  network.rs  power.rs  runtime.rs  storage.rs  system.rs  ui.rs
src/acquisition/: mod.rs
src/alarms/: actions.rs  engine.rs  mod.rs
src/drivers/: buttons.rs  buzzer.rs  display.rs  ds2482.rs  lis2dh12.rs  mod.rs  stm.rs
src/hal/: mod.rs  real.rs
src/libs/: config.rs  config_migrations.rs  logging.rs  mod.rs
src/libs/accelerometer/: detector.rs  mod.rs  monitor.rs  state.rs
src/libs/alarms/: callbacks.rs  color.rs  controller.rs  mod.rs  mqtt_callback.rs  state.rs  threshold.rs
src/libs/authorization/: manager.rs  mod.rs  state.rs
src/libs/ble/: advertising.rs  config.rs  event_router.rs  mod.rs
src/libs/buzzer/: controller.rs  mod.rs  pattern.rs  priority.rs  thread.rs
src/libs/config_applier/: applier.rs  mod.rs  validation.rs
src/libs/control/: client.rs  mod.rs  protocol.rs  server.rs
src/libs/crypto/: ca_registry.rs  certificate.rs  error.rs  mod.rs  nonce.rs  verification.rs
src/libs/display/: ProFont9Point.raw  buttons.rs  font.rs  icons.rs  mod.rs  monitor.rs  screens.rs  splash.rs
src/libs/eye/: advertising.rs  config.rs  en12830.rs  mod.rs  monitor.rs  provisioning.rs  state.rs
src/libs/leds/: mod.rs  monitor.rs  state.rs
src/libs/lorawan/: chirpstack.rs  detector.rs  mod.rs  monitor.rs  provisioning.rs  registry.rs  state.rs  sticker_add.rs  sticker_alarm.rs  sticker_command.rs  (+4 more)
src/sensors/: discovery_backend.rs  ds18b20.rs  lis2dh12.rs  mod.rs  onewire.rs  simulated.rs
src/ui/: dashboard.rs
static/: index.html
tests/: control_cli.rs  control_robustness.rs  integration_tests.rs  sticker_add_simulated.rs
tests/integration/: test_buttons.py  test_display.py
tests/unit/: test_config_manager.py  test_interface.py  test_queue_manager.py
(+70 files in other folders)
