[package]
name = "fiber_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.22.1"
embedded-graphics = "0.8.1"
i2cdev = "0.6"
serialport = { version = "4", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
qrcode = "0.14"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
time = "0.3"
crossbeam = "0.8"

# MQTT dependencies
rumqttc = "0.24"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
rand = "0.8"

[[bin]]
name = "fiber_app"
path = "src/main.rs"

[lib]
name = "fiber_app"
path = "src/lib.rs"