[package]
name = "fiber_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.22.1"
embedded-graphics = "0.8.1"
profont = "0.7.0"
i2cdev = "0.6"
serialport = { version = "4", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
qrcode = "0.14"
rusqlite = { version = "0.30", features = ["bundled-sqlcipher", "chrono"] }
time = "0.3"
crossbeam = "0.8"

# MQTT dependencies
rumqttc = "0.24"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
rand = "0.8"

# Cryptography dependencies (Ed25519 signatures for EU MDR compliance)
ed25519-dalek = { version = "2.1", features = ["std", "rand_core"] }
signature = "2.2"
base64 = "0.21"
hex = "0.4"

# UUID generation for challenge_id
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }

# Replay protection (LRU cache for nonce tracking)
lru = "0.12"

# Pairing protocol encryption
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"

[features]
default = []
dev-platform = []

[[bin]]
name = "fiber_app"
path = "src/main.rs"

[lib]
name = "fiber_app"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"